# netatalk

./: .gitignore  Dockerfile  README.md  bootstrap  config.h.meson  configure.ac  meson.build  meson.options
.github/workflows/: build.yml  macos.yml
config/: .gitignore  Makefile.am  meson.build
contrib/macusers/: .gitignore  meson.build
contrib/shell_utils/: .gitignore  meson.build
distrib/config/: .gitignore  meson.build
distrib/initscript/: com.netatalk.daemon.plist.in  launchctl.sh  meson.build  netatalkd
distrib/initscripts/: Makefile.am  com.netatalk.daemon.plist.in  launchctl.sh  meson.build  netatalkd.in
doc/: meson.build
doc/ja/manpages/man1/: afpstats.1.xml  apple_dump.1.xml  macusers.1.xml
doc/ja/manpages/man5/: extmap.conf.5.xml
doc/ja/manual/: manual.xml.in
doc/manpages/: meson.build
doc/manpages/man1/: Makefile.am  afpldaptest.1.xml  afpstats.1.xml  meson.build
doc/manpages/man5/: afp.conf.5.xml  afp_signature.conf.5.xml  afp_voluuid.conf.5.xml  extmap.conf.5.xml  meson.build
doc/manpages/man8/: afpd.8.xml  cnid_metad.8.xml  meson.build  netatalk.8.xml
doc/manual/: Makefile.am  configuration.xml  install.xml  manual.xml.in  meson.build
etc/afpd/: Makefile.am  afp_config.c  afp_dsi.c  afp_options.c  afp_util.c  afprun.c  afpstats.c  afpstats_obj.c  auth.c  catsearch.c  desktop.c  dircache.c  directory.c  directory.h  enumerate.c  extattrs.c  fce_api.c  fce_util.c  file.c  file.h  filedir.c  fork.c  fork.h  main.c  mangle.c  meson.build  messages.c  ofork.c  status.c  switch.c  uam.c  unix.c  unix.h  volume.c
etc/cnid_dbd/: cmd_dbd.c  cmd_dbd_scanvol.c  cnid_metad.c  comm.c  db_param.c  dbd_add.c  dbd_dbcheck.c  dbd_delete.c  dbd_getstamp.c  dbd_lookup.c  dbd_resolve.c  dbd_search.c  dbd_update.c  dbif.c  dbif.h  meson.build  pack.c  usockfd.c  usockfd.h
etc/netatalk/: Makefile.am  afp_mdns.c  afp_zeroconf.c  meson.build  netatalk.c
etc/uams/: meson.build  uams_dhx2_pam.c  uams_dhx_pam.c  uams_dhx_passwd.c  uams_gss.c  uams_guest.c  uams_pam.c  uams_passwd.c
include/atalk/: Makefile.am  acl.h  adouble.h  asp.h  bstradd.h  cast.h  cnid_bdb_private.h  dalloc.h  dsi.h  ea.h  fce_api.h  globals.h  ldapconfig.h  logger.h  meson.build  queue.h  rpc.h  server_child.h  unix.h  util.h  vfs.h  volume.h
libatalk/: Makefile.am  meson.build
libatalk/acl/: cache.c  ldap.c  ldap_config.c  meson.build  uuid.c
libatalk/adouble/: Makefile.am  ad_attr.c  ad_conv.c  ad_flush.c  ad_lock.c  ad_mmap.c  ad_open.c  ad_read.c  ad_recvfile.c  ad_sendfile.c  ad_size.c  ad_write.c  meson.build
libatalk/bstring/: bstradd.c  bstrlib.c  meson.build
libatalk/cnid/: cnid.c  cnid_init.c  meson.build
libatalk/cnid/dbd/: cnid_dbd.c  meson.build
libatalk/cnid/last/: cnid_last.c  meson.build
libatalk/cnid/mysql/: cnid_mysql.c  meson.build
libatalk/dsi/: dsi_attn.c  dsi_close.c  dsi_cmdreply.c  dsi_getsess.c  dsi_getstat.c  dsi_opensess.c  dsi_read.c  dsi_stream.c  dsi_tcp.c  dsi_tickle.c  dsi_write.c  meson.build
libatalk/iniparser/: dictionary.c  iniparser.c  meson.build
libatalk/talloc/: dalloc.c
libatalk/unicode/: charcnv.c  iconv.c  meson.build  utf16_case.c  utf8.c  util_unistr.c
libatalk/unicode/charsets/: generic_cjk.c  generic_mb.c  mac_centraleurope.c  mac_chinese_simp.c  mac_chinese_trad.c  mac_cyrillic.c  mac_greek.c  mac_hebrew.c  mac_japanese.c  mac_korean.c  mac_roman.c  mac_turkish.c  meson.build
libatalk/util/: cnid.c  fault.c  ftw.c  getiface.c  gettok.c  locking.c  logger.c  meson.build  module.c  netatalk_conf.c  queue.c  server_child.c  server_ipc.c  server_lock.c  socket.c  unix.c
libatalk/vfs/: ea_ad.c  ea_sys.c  extattr.c  meson.build  unix.c  vfs.c
macros/: Makefile.am  cnid-backend.m4  db3-check.m4  iconv.m4  netatalk.m4  pam-check.m4  summary.m4  util.m4  zeroconf.m4
man/man1/: Makefile.am  ad.1.in  afpldaptest.1.in  afpstats.1.in  apple_dump.1.in  asip-status.1.in  dbd.1.in  macusers.1.in  netatalk-config.1.in
man/man5/: afp.conf.5.in  afp_signature.conf.5.in  afp_voluuid.conf.5.in  extmap.conf.5.in
man/man8/: afpd.8.in  cnid_dbd.8.in  cnid_metad.8.in  netatalk.8.in
test/afpd/: Makefile.am  afpfunc_helpers.c  afpfunc_helpers.h  meson.build  subtests.c  subtests.h  test.c  test.h
